# rankviz

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: benchmark_results_eval.csv  benchmark_results_planning.csv  heldout_results.csv  umap_sensitivity.csv  umap_sensitivity_eval.csv
notebooks/: tutorial.ipynb
scripts/: benchmark_all_domains.py  build_eval_corpus.py  build_thesis_figures.py  generate_examples.py  heldout_split.py  make_benchmark_figure.py  umap_sensitivity.py
src/rankviz/: __init__.py  _base.py  _similarity.py  _style.py  core.py  plot_landscape.py  quick.py  rank_carpet.py  rank_distribution.py  similarity_waterfall.py
tests/: conftest.py  test_core.py  test_quick.py  test_rank_carpet.py  test_rank_distribution.py  test_similarity.py  test_similarity_waterfall.py
