[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rankviz"
version = "0.1.0"
description = "Retrieval-aware visualisation for dense-retrieval and RAG systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Brage Eilertsen" },
]
keywords = [
    "retrieval",
    "RAG",
    "visualisation",
    "dense-retrieval",
    "information-retrieval",
    "embeddings",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
plotly = [
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mpl>=0.16",
    "plotly>=5.0",
]

[project.urls]
Repository = "https://github.com/BrageEilertsen/CORE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
